--- a/style/Post.css
+++ b/style/Post.css
@@ -119,8 +119,8 @@
     top: 100px;
     height: 200px;
     z-index: 2;
+
     width: 50%;
-    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
 }
 .link-filter{
     display: flex;
@@ -128,12 +128,15 @@
 }
 .link-f{
     text-decoration: none;
-    padding: 5px 20px;
     margin-left: 10px;
     margin-top: 4px;
+    align-items: center;
+    padding: 10px;
     color: var(--block);
     border-radius: 20px;
-    border: 1px solid var(--blockL);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     transition: 0.3s ease;
 }
 
